--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "browserify app/index.jsx -t [babelify --sourceMap] -d | exorcist bundle.js.map > bundle.js",
-    "start": "electron index.js"
+    "start": "electron index.js",
+    "pack": "electron-packager . --platform=win32,linux --arch=x64"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +14,6 @@
     "electron-packager": "^7.3.0",
     "electron-prebuilt": "^1.3.1",
     "flv": "0.0.1",
-    "lamejs": "^1.1.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
